# aurora-egui-demo

./: .env  Cargo.toml  Cross.toml  aarch64_build.sh  arm_build.sh  com.lmaxyz.EguiAuroraExample.desktop  deploy.sh
RPMS/: com.lmaxyz.EguiAuroraExample-0.2-1.aarch64.rpm
rpm/: com.lmaxyz.EguiAuroraExample.spec
rpm/icons/86x86/: com.lmaxyz.EguiAuroraExample.png~
src/: main.rs
